--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,11 @@
 
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 112px; 
+}
+
 body, 
 a, a:hover, 
 button, button:hover,
