--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,7 @@ button, button:hover,
 label, label:hover {
   cursor: url('https://derrint.sirv.com/Images/simple-duck-studios/home/cursor.png'), auto !important;	
 }
+
+.bg-black, .bg-black:hover {
+  cursor: url('https://derrint.sirv.com/Images/simple-duck-studios/home/cursor-inverted.png'), auto !important;	
+}
