--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,3 +22,15 @@ label, label:hover {
 .bg-black, .bg-black:hover {
   cursor: url('https://derrint.sirv.com/Images/simple-duck-studios/home/cursor-inverted.png'), auto !important;	
 }
+
+@media only screen and (max-width: 1024px) {
+  html {
+    scroll-padding-top: 96px; 
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    scroll-padding-top: 88px; 
+  }
+}
